# pysocket

./: client.bat  client.py  main.py  notify.py  pyproject.toml  server.py
src/: __init__.py  player.py  utils.py
